# Vehicle-Infotainment-System

./: .gitignore  CMakeLists.txt  Main.qml  README.html  README.md  main.cpp  prompt_instructions.md  qml.qrc  summary.md  youtube-caption-processor.md
controllers/headers/: audiocontroller.h  canbuscontroller.h  hvachandler.h  mediacontroller.h  system.h  vehicledatacontroller.h
controllers/src/: audiocontroller.cpp  canbuscontroller.cpp  hvachandler.cpp  mediacontroller.cpp  system.cpp  vehicledatacontroller.cpp
ui/BottomBar/: BottomBar.qml  HVACComponent.qml  MusicPlayerStatus.qml  VolumeControlComponent.qml  qmldir
ui/Dashboard/: CircularGauge.qml  Speedometer.qml  TachometerGauge.qml  VehicleDashboard.qml  WarningLight.qml  qmldir
ui/LeftScreen/: LeftScreen.qml  qmldir
ui/MusicPlayer/: MusicPlayerComponent.qml  qmldir
ui/ParkAssist/: ParkAssistComponent.qml  qmldir
ui/Phone/: PhoneInterface.qml  qmldir
ui/RightScreen/: NavigationSearchBox.qml  RightScreen.qml  StatusBar.qml  qmldir
